add all files in Rivator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,40 @@
 <resources>
     <string name="app_name">RivatorProject</string>
+    
+    <string name="agree_detail">정부는 예산에 변경을 가할 필요가 있을 때에는 추가경정예산안을 편성하여\n 
+국회에 제출할 수 있다. 헌법에 의하여 체결·공포된 조약과 일반적으로\n
+승인된  국제법규는 국내법과 같은 효력을 가진다.\n
+국회는 헌법개정안이 공고된 날로부터 60일 이내에 의결하여야 하며,\n
+국회의 의결은 재적의원 3분의 2 이상의 찬성을 얻어야 한다.\n
+정기회의 회기는 100일을, 임시회의 회기는 30일을 초과할 수 없다.\n
+대통령은 전시·사변 또는 이에 준하는 국가비상사태에 있어서 병력으로써\n 
+군사상의 필요에 응하거나 공공의 안녕질서를 유지할 필요가 있을 때에는\n
+법률이 정하는 바에 의하여 계엄을 선포할 수 있다.\n
+국가는 모성의 보호를 위하여 노력하여야 한다. 국회의 정기회는\n
+법률이 정하는 바에 의하여 매년 1회 집회되며, 국회의 임시회는 대통령\n 
+또는 국회재적의원 4분의 1 이상의 요구에 의하여 집회된다.\n
+각급 선거관리위원회의 조직·직무범위 기타 필요한 사항은 법률로 정한다.\n
+모든 국민은 그 보호하는 자녀에게 적어도 초등교육과 법률이 정하는\n
+교육을 받게 할 의무를 진다.\n
+대통령은 제3항과 제4항의 사유를 지체없이 공포하여야 한다. \n
+대통령·국무총리·국무위원·행정각부의 장·헌법재판소 재판관·법관·\n
+중앙선거관리위원회 위원·감사원장·감사위원 기타 법률이 정한 공무원이\n 
+그 직무집행에 있어서 헌법이나 법률을 위배한 때에는\n 
+국회는 탄핵의 소추를 의결할 수 있다.\n
+국무총리는 대통령을 보좌하며, 행정에 관하여 대통령의 명을 받아\n 
+행정각부를 통할한다. 위원은 정당에 가입하거나 정치에 관여할 수 없다.\n 
+이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의\n
+집회일 전일까지로 한다.\n
+국회는 국정을 감사하거나 특정한 국정사안에 대하여 조사할 수 있으며,\n 
+이에 필요한 서류의 제출 또는 증인의 출석과 증언이나\n
+의견의 진술을 요구할 수 있다.</string>
+
+    <string name="agree_one">이용약관, 개인정도 수집 및 이용,\n
+    위치정보 이용 약관에 대해 모두 동의합니다.</string>
+
+    <string name="agree_two">Rivator 이용약관 동의(필수)</string>
+
+    <string name="agree_three">Rivator 개인정보 동의(필수)</string>
+
+    <string name="agree_four">Rivator 위치 동의(필수)</string>
 </resources>
