--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
 
     <string name="agree_four">Rivator 위치 동의(필수)</string>
 
+    <!-- 메인 화면 스트링 -->
+    <string name="more"><u>더보기</u></string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
