강사 신청 액티비티 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
 
     <string name="lecture_underline_text"><u>평가하기</u>.</string>
 
+    <string name="spiner_promp">choose option</string>
 </resources>
