앱 아이콘 변경 및 앱 이름 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RivatorProject</string>
+    <string name="app_name">Rivator</string>
 
     <string name="agree_detail">정부는 예산에 변경을 가할 필요가 있을 때에는 추가경정예산안을 편성하여\n 
 국회에 제출할 수 있다. 헌법에 의하여 체결·공포된 조약과 일반적으로\n
