--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <!-- 메인 화면 스트링 -->
     <string name="more"><u>더보기</u></string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello blank courseReviewFragment</string>
 
     <string name="lecture_underline_text"><u>평가하기</u>.</string>
 
